examples/test/testpolicy12400.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12400
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key33: value17
      key6: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value41
      podSelector:
        matchLabels:
          key34: value36
          key31: value1
